# OpenGLFun

OpenGL/: CMakeLists.txt  main.cpp
OpenGL/src/: window.cpp
